src/objects/Recipe__c.object
<CustomObject>
    <fields>
        <fullName>API_External_ID__c</fullName>
        <description>External ID to be used for RecipeDB API purposes.</description>
        <displayFormat>R-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>API External ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Additional_Image_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Image 1</label>
        <referenceTo>Recipe_Media__c</referenceTo>
        <relationshipLabel>Recipes (Additional Image 1)</relationshipLabel>
        <relationshipName>Recipes6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Image_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Image 2</label>
        <referenceTo>Recipe_Media__c</referenceTo>
        <relationshipLabel>Recipes (Additional Image 2)</relationshipLabel>
        <relationshipName>Recipes7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Image_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Image 3</label>
        <referenceTo>Recipe_Media__c</referenceTo>
        <relationshipLabel>Recipes (Additional Image 3)</relationshipLabel>
        <relationshipName>Recipes8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApprovedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ApprovedBy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recipes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Background_Image__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Background Image</label>
        <referenceTo>Recipe_Media__c</referenceTo>
        <relationshipLabel>Recipes (Background Image)</relationshipLabel>
        <relationshipName>RecipesBgrnd</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand_Recipe_Image__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Recipe Image</label>
        <referenceTo>Recipe_Media__c</referenceTo>
        <relationshipLabel>Recipes (Brand Recipe Image)</relationshipLabel>
        <relationshipName>RecipesBrand</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Check_Profile__c</fullName>
        <label>Check Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CurrentLockedUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A Field that Shows the Current Accessing User</description>
        <label>CurrentLockedUser</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recipes3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Editor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Editor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recipes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Edit_Notification_To_Publisher_Time__c</fullName>
        <label>Edit Notification To Publisher Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Edit_Notification_To_Publisher__c</fullName>
        <defaultValue>false</defaultValue>
        <description>T-120059 - Email When Admin Changes are made on Recipe</description>
        <label>Edit Notification To Publisher?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flavor_List_String__c</fullName>
        <label>Flavor List String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Legal_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Legal Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Canadian French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <label>Locale</label>
        <picklist>
            <picklistValues>
                <fullName>EN-US</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>EN-CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR-CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT-BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES-MX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES-CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES-CL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES-AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EN-GB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EN-IN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Main_Drink_Image_URL__c</fullName>
        <formula>Main_Drink_Image__r.Image__c</formula>
        <label>Main Drink Image URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Drink_Image__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Drink Image</label>
        <referenceTo>Recipe_Media__c</referenceTo>
        <relationshipLabel>Recipes</relationshipLabel>
        <relationshipName>Recipes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Main_Ingredient_Image__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Ingredient Image</label>
        <referenceTo>Recipe_Media__c</referenceTo>
        <relationshipLabel>Recipes (Main Ingredient Image)</relationshipLabel>
        <relationshipName>Recipes5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Master_Recipe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Recipe</label>
        <referenceTo>Master_Recipe__c</referenceTo>
        <relationshipLabel>Recipes</relationshipLabel>
        <relationshipName>Recipes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Menu_Description__c</fullName>
        <label>Menu Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Mobile_Drink_Image_URL__c</fullName>
        <formula>Mobile_Drink_Image__r.Content_URL__c</formula>
        <label>Mobile Drink Image URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Drink_Image__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mobile Drink Image</label>
        <referenceTo>Recipe_Media__c</referenceTo>
        <relationshipLabel>Recipes (Mobile Drink Image)</relationshipLabel>
        <relationshipName>Recipes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_Selected_Image_URL__c</fullName>
        <formula>Mobile_Selected_Image__r.Content_URL__c</formula>
        <label>Mobile Selected Image URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Selected_Image__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mobile Selected Image</label>
        <referenceTo>Recipe_Media__c</referenceTo>
        <relationshipLabel>Recipes (Mobile Selected Image)</relationshipLabel>
        <relationshipName>Recipes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_Unselected_Image_URL__c</fullName>
        <formula>Mobile_Selected_Image__r.Content_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile Unselected Image URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Unselected_Image__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mobile Unselected Image</label>
        <referenceTo>Recipe_Media__c</referenceTo>
        <relationshipLabel>Recipes (Mobile Unselected Image)</relationshipLabel>
        <relationshipName>Recipes3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NEO_Recipe_Id__c</fullName>
        <description>An External Id Field That helps during dataload from external system.</description>
        <externalId>true</externalId>
        <label>NEO Recipe Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occasion_List_String__c</fullName>
        <label>Occasion List String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occasion_Type__c</fullName>
        <label>Occasion Type</label>
        <picklist>
            <picklistValues>
                <fullName>Celebrations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Theme Parties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outdoor Gatherings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holidays</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Occasion__c</fullName>
        <label>Occasion</label>
        <picklist>
            <controllingField>Occasion_Type__c</controllingField>
            <picklistValues>
                <fullName>4th of July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anniversary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April Fool&apos;s Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Award Show Night</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baby Shower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bachelorette Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bachelor Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beach Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Before the Bar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Block Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Game Night</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonfire Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Book Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridal Shower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carnival Night</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casino Night</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cinco de Mayo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clambake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class Reunion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocktail Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuban Night</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day at the Races</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December Holidays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dessert Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Election Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engagement Party</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Preparation_Steps__c</fullName>
        <label>Preparation Steps</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Recipe_Color_del__c</fullName>
        <label>Recipe Color</label>
        <picklist>
            <picklistValues>
                <fullName>Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recipe_Flavor_del__c</fullName>
        <label>Recipe Flavor</label>
        <picklist>
            <picklistValues>
                <fullName>Almond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cherry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chocolate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cinnamon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citrus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coconut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cranberry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ginger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grapefruit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lemon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mango</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nutty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passion Fruit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pineapple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pistachio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pomegranate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raspberry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spicy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strawberry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vanilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Grape</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Recipe_Tag__c</fullName>
        <label>Recipe_Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipe_Tags__c</fullName>
        <label>Recipe Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipe_Title__c</fullName>
        <label>Recipe Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipe_Type_List_String__c</fullName>
        <label>Recipe Type List String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipe_Type_del__c</fullName>
        <label>Recipe Type</label>
        <picklist>
            <picklistValues>
                <fullName>Beer-Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bloody Marys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocktails</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daiquiris</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frozen Cocktails</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good for Groups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hot Drinks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lower Calorie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luxury Drops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manhattans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Margaritas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Martinis - Flavored Vodkas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Martinis - Gin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Martinis - Liqueurs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Martinis - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Martinis - Vodka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mix It</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mojitos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Alcoholic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Old Fashioneds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On the Rocks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pour It</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shots</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stir It</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wine-Based/ Sangria</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Recipe_Version__c</fullName>
        <label>Recipe Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReviewedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ReviewedBy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recipes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Search_Recipe_Image__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Search Recipe Image</label>
        <referenceTo>Recipe_Media__c</referenceTo>
        <relationshipLabel>Recipes (Search Recipe Image)</relationshipLabel>
        <relationshipName>RecipesSearch</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Thumbnail_Drink_Image_URL__c</fullName>
        <formula>Thumbnail_Drink_Image__r.Content_URL__c</formula>
        <label>Thumbnail Drink Image URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thumbnail_Drink_Image__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Thumbnail Drink Image</label>
        <referenceTo>Recipe_Media__c</referenceTo>
        <relationshipLabel>Recipes (Thumbnail Drink Image)</relationshipLabel>
        <relationshipName>Recipes4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isSaved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSaved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lastModifiedTime__c</fullName>
        <label>lastModifiedTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>recordSaved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>recordSaved</label>
        <type>Checkbox</type>
    </fields>
    <label>Recipe</label>
    <listViews>
        <fullName>All_Recipes</fullName>
        <columns>NAME</columns>
        <columns>Recipe_Title__c</columns>
        <columns>NEO_Recipe_Id__c</columns>
        <columns>API_External_ID__c</columns>
        <columns>Main_Drink_Image__c</columns>
        <columns>Background_Image__c</columns>
        <columns>Status__c</columns>
        <columns>Locale__c</columns>
        <filterScope>Everything</filterScope>
        <label>0.All Recipes</label>
    </listViews>
    <listViews>
        <fullName>Approved_Recipes</fullName>
        <columns>LegacyID__c</columns>
        <columns>Recipe_Title__c</columns>
        <columns>Status__c</columns>
        <columns>Current_Editor__c</columns>
        <columns>API_External_ID__c</columns>
        <columns>Locale__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>recordSaved__c</columns>
        <columns>Has_Legal_Approval__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>5.Approved Recipes</label>
    </listViews>
    <listViews>
        <fullName>Archive_Recipes</fullName>
        <columns>NAME</columns>
        <columns>Recipe_Title__c</columns>
        <columns>NEO_Recipe_Id__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Archive</value>
        </filters>
        <label>3.Archive Recipes</label>
    </listViews>
    <listViews>
        <fullName>Cuervo_Deletes</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6</booleanFilter>
        <columns>NAME</columns>
        <columns>API_External_ID__c</columns>
        <columns>Recipe_Title__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>API_External_ID__c</field>
            <operation>contains</operation>
            <value>R-0016,R-0026,R-0057,R-0207,R-0221,R-0242,R-0262,R-0283,R-0286,R-0290,R-0300</value>
        </filters>
        <filters>
            <field>API_External_ID__c</field>
            <operation>contains</operation>
            <value>R-0334,R-0382,R-0399,R-0509,R-0513,R-0525,R-0582,R-0717,R-0925,R-0935,R-0941</value>
        </filters>
        <filters>
            <field>API_External_ID__c</field>
            <operation>contains</operation>
            <value>R-0949,R-1037,R-1055,R-1076,R-1101,R-1117,R-1199,R-1200,R-1209,R-1288,R-1390</value>
        </filters>
        <filters>
            <field>API_External_ID__c</field>
            <operation>contains</operation>
            <value>R-1408,R-1409,R-1412,R-1432,R-1491,R-1493,R-1512,R-1516,R-1574,R-1607,R-1657</value>
        </filters>
        <filters>
            <field>API_External_ID__c</field>
            <operation>contains</operation>
            <value>R-1695,R-1716,R-1717,R-1733,R-1770,R-1772,R-1776,R-1852,R-1854,R-1855,R-1860</value>
        </filters>
        <filters>
            <field>API_External_ID__c</field>
            <operation>contains</operation>
            <value>R-1880,R-1997,R-2780,R-5481,R-5504,R-5549,R-5574,R-1278</value>
        </filters>
        <label>Cuervo-Deletes</label>
        <sharedTo>
            <group>RecipeDB_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Draft_Recipes</fullName>
        <columns>NAME</columns>
        <columns>Recipe_Title__c</columns>
        <columns>Current_Editor__c</columns>
        <columns>Locale__c</columns>
        <columns>Status__c</columns>
        <columns>API_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>1.Draft Recipes</label>
    </listViews>
    <listViews>
        <fullName>Images</fullName>
        <columns>NAME</columns>
        <columns>Main_Drink_Image_URL__c</columns>
        <columns>Menu_Description__c</columns>
        <columns>Short_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>Images</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Locale_Duplicates</fullName>
        <columns>NAME</columns>
        <columns>Recipe_Title__c</columns>
        <columns>lastModifiedTime__c</columns>
        <columns>Comments__c</columns>
        <columns>NEO_Recipe_Id__c</columns>
        <columns>LegacyID__c</columns>
        <columns>Main_Drink_Image__c</columns>
        <columns>Additional_Image_1__c</columns>
        <columns>Thumbnail_Drink_Image__c</columns>
        <columns>Background_Image__c</columns>
        <columns>Status__c</columns>
        <columns>Locale__c</columns>
        <columns>recordSaved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LegacyID__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>LegacyID__c</field>
            <operation>notContain</operation>
            <value>a</value>
        </filters>
        <label>Locale Duplicates</label>
    </listViews>
    <listViews>
        <fullName>Pending_Review_Apporve</fullName>
        <columns>NAME</columns>
        <columns>Recipe_Title__c</columns>
        <columns>NEO_Recipe_Id__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending Review,Pending Approval</value>
        </filters>
        <label>2.Pending Review/Pending Apporve</label>
    </listViews>
    <listViews>
        <fullName>Recently_Created</fullName>
        <columns>NAME</columns>
        <columns>Recipe_Title__c</columns>
        <columns>NEO_Recipe_Id__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>9/25/2012 12:00 AM</value>
        </filters>
        <label>Recently Created</label>
    </listViews>
    <listViews>
        <fullName>Recently_Created_Recipes</fullName>
        <columns>NAME</columns>
        <columns>Recipe_Title__c</columns>
        <columns>NEO_Recipe_Id__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>10/8/2012 12:00 AM</value>
        </filters>
        <label>Recently Created Recipes</label>
    </listViews>
    <listViews>
        <fullName>Rejected_Recipes</fullName>
        <columns>NAME</columns>
        <columns>Recipe_Title__c</columns>
        <columns>NEO_Recipe_Id__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>4.Rejected Recipes</label>
    </listViews>
    <nameField>
        <displayFormat>RCP-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recipes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>